[package]
name = "exploded"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.19"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
rand = "0.8.5"

[dependencies.web-sys]
version = "0.3"
features = [
    "AudioBuffer",
    "AudioContext",
    "AudioDestinationNode",
    "AudioBufferSourceNode",
    "DomRect",
    "Navigator",
    "Response",
    "Touch",
    "TouchList"
]

[dependencies.getrandom]
version = "0.2"
features = ["js"]
